# noid-rag

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  config.example.yml  config.pgvector.yml  config.qdrant.yml  config.zvec.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml
src/noid_rag/: __init__.py  __main__.py  api.py  batch.py  chunker.py  circuit_breaker.py  config.py  embeddings.py  embeddings_zvec.py  eval.py  export.py  generate.py  llm.py  models.py  parser.py  tune.py  vectorstore.py  vectorstore_base.py  vectorstore_factory.py  vectorstore_qdrant.py  vectorstore_zvec.py
src/noid_rag/cli/: __init__.py  app.py  display.py  main.py
src/noid_rag/cli/commands/: batch.py  chunk.py  eval.py  generate.py  info.py  ingest.py  parse.py  reset.py  search.py  tune.py
src/noid_rag/eval_backends/: __init__.py  promptfoo_backend.py  ragas_backend.py
tests/: conftest.py  test_api.py  test_batch.py  test_chunker.py  test_circuit_breaker.py  test_config.py  test_embeddings.py  test_eval.py  test_export.py  test_generate.py  test_llm.py  test_models.py  test_parser.py  test_reset.py  test_tune.py  test_vectorstore.py  test_vectorstore_factory.py  test_vectorstore_qdrant.py  test_vectorstore_zvec.py
